--- a/makefile.am
+++ b/makefile.am
@@ -1,7 +1,4 @@
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = autogen.sh COPYING README
-SUBDIRS = libobs libobs-opengl test obs
+SUBDIRS = libobs libobs-opengl test obs build
 
-if OS_WIN
-SUBDIRS += build
-endif
