--- a/obs/makefile.am
+++ b/obs/makefile.am
@@ -13,8 +13,8 @@ endif
 
 obs_PROGRAMS = obs
 obs_LDADD = $(top_srcdir)/libobs/libobs.la
-obs_SOURCES = window-main-basic.cpp \
-	      window-settings-basic.cpp \
+obs_SOURCES = window-basic-main.cpp \
+	      window-basic-settings.cpp \
 	      settings-basic.cpp \
 	      settings-basic-general.cpp \
 	      settings-basic-video.cpp \
