--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -1,3 +1,7 @@
+option(USE_STATIC_WX "Link wxWidgets statically" false)
+if(USE_STATIC_WX)
+	set(wxWidgets_USE_STATIC true)
+endif()
 find_package(wxWidgets COMPONENTS core base REQUIRED)
 
 include("${wxWidgets_USE_FILE}")
@@ -25,9 +29,45 @@ function(wx_required_version)
 endfunction()
 wx_required_version()
 
+if(USE_STATIC_WX)
+	#unpack -llib to static library names
+	set(WX_LIBRARIES "")
+	set(lib_suffixes ${CMAKE_FIND_LIBRARY_SUFFIXES})
+	set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX}
+		${CMAKE_DYNAMIC_LIBRARY_SUFFIX} ${CMAKE_SHARED_OBJECT_SUFFIX})
+	foreach(lib ${wxWidgets_LIBRARIES})
+		string(SUBSTRING ${lib} 0 2 _l)
+		if(_l STREQUAL "-l")
+			string(SUBSTRING ${lib} 2 -1 libname)
+			find_library(lib_file NAMES ${libname}
+				HINTS ${wxWidgets_LIBRARY_DIRS})
+			if(lib_file)
+				list(APPEND WX_LIBRARIES ${lib_file})
+			else()
+				list(APPEND WX_LIBRARIES ${lib})
+			endif()
+			unset(lib_file CACHE)
+		else()
+			list(APPEND WX_LIBRARIES ${lib})
+		endif()
+	endforeach()
+	if(APPLE)
+		find_library(lzma NAMES lzma)
+		if(lzma)
+			link_libraries(${lzma})
+		endif()
+	endif()
+	set(CMAKE_FIND_LIBRARY_SUFFIXES ${lib_suffixes})
+	unset(lib_suffixes)
+	link_libraries(${WX_LIBRARIES})
+	unset(WX_LIBRARIES)
+else()
+	link_libraries(${wxWidgets_LIBRARIES})
+endif()
+
 include_directories(SYSTEM ${obs_SOURCE_DIR}/libobs)
 
-link_libraries(${wxWidgets_LIBRARIES} libobs)
+link_libraries(libobs)
 
 if(WIN32)
 	set(obs_platform_src
