add cmake plugin helpers

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -102,6 +102,7 @@ if(APPLE)
 		MACOSX_BUNDLE ${BUILD_APP_BUNDLE})
 	if(BUILD_APP_BUNDLE)
 		obs_add_core_lib_target(obs)
+		obs_add_plugin_target(obs)
 		obs_add_data_dir(/bin/obs.app/Contents/)
 	endif()
 endif()
