--- a/test/test-input/CMakeLists.txt
+++ b/test/test-input/CMakeLists.txt
@@ -8,7 +8,8 @@ add_library(test-input MODULE
 target_link_libraries(test-input
 	libobs)
 
-file(COPY
+obs_add_plugin(test-input)
+
+obs_add_data_source(/data/obs-plugins/test-input/
 	${obs_SOURCE_DIR}/build/data/obs-plugins/test-input/draw.effect
-	${obs_SOURCE_DIR}/build/data/obs-plugins/test-input/test.effect
-	DESTINATION ${obs_BINARY_DIR}/data/obs-plugins/test-input/)
+	${obs_SOURCE_DIR}/build/data/obs-plugins/test-input/test.effect)
