Added a sinewave audio test source
 - Added a test audio sinewave test source that should just play a sine
   wave of the middle C note.  Using unsigned 8 bit mono to test
   ffmpeg's audio resampler, seems to work pretty good.

 - Fixed a boolean trap in threading.h for the event_init function, it
   now uses enum event_type, which can be EVENT_TYPE_MANUAL or
   EVENT_TYPE_AUTO, to specify whether the event is automatically reset
   or not.

 - Changed display names of test sources to something a little less
   vague.

 - Removed te whole "if timestamp is 0 just use current system time"
   when outputting source audio, if you want to use system time you
   should just use system time yourself.  Using 0 as some sort of
   "indicator" like that just makes things confusing, and prevents you
   from legitimately using 0 as a timestamp for your audio data.

--- a/test/test-input/makefile.am
+++ b/test/test-input/makefile.am
@@ -19,4 +19,5 @@ endif
 libtest_input_la_LIBADD = $(top_srcdir)/libobs/libobs.la
 libtest_input_la_SOURCES = test-filter.c \
 			   test-input.c \
-			   test-random.c
+			   test-random.c \
+			   test-sinewave.c
