--- a/vs/2013/test-input/test-input.vcxproj.filters
+++ b/vs/2013/test-input/test-input.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="..\..\..\test\test-input\test-input-exports.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\test\test-input\test-sinewave.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\test\test-input\test-random.c">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\test\test-input\test-input.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\test\test-input\test-sinewave.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
