--- a/deps/jansson/CMakeLists.txt
+++ b/deps/jansson/CMakeLists.txt
@@ -289,20 +289,20 @@ endif ()
 
 # LIBRARY for linux
 # RUNTIME for windows (when building shared)
-install (TARGETS jansson
-   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-   RUNTIME DESTINATION bin
-)
+#install (TARGETS jansson
+#   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+#   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+#   RUNTIME DESTINATION bin
+#)
 
-install (FILES
-         ${CMAKE_CURRENT_BINARY_DIR}/include/jansson_config.h
-         ${CMAKE_CURRENT_SOURCE_DIR}/src/jansson.h
-         DESTINATION include)
+#install (FILES
+#         ${CMAKE_CURRENT_BINARY_DIR}/include/jansson_config.h
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/jansson.h
+#         DESTINATION include)
 
-install (FILES 
-         ${CMAKE_CURRENT_BINARY_DIR}/jansson.pc
-         DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+#install (FILES 
+#         ${CMAKE_CURRENT_BINARY_DIR}/jansson.pc
+#         DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
 
 # For building Documentation (uses Sphinx)
 OPTION (BUILD_DOCS "Build documentation (uses python-sphinx)." ON)
