Require cmake 2.8.12 on osx
This requirement is due to rpath usage in the project and SDK location
changes[1] in more recent osx versions

[1] i.e. http://cmake.org/gitweb?p=cmake.git;a=commitdiff;h=1fce189e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
-cmake_minimum_required(VERSION 2.8.11)
+if(APPLE)
+	cmake_minimum_required(VERSION 2.8.12)
+else()
+	cmake_minimum_required(VERSION 2.8.11)
+endif()
 
 project(obs-studio)
 
